exercice 2 bridge network

--- a/tp api/nginx/nginx.conf
+++ b/tp api/nginx/nginx.conf
@@ -1,5 +1,6 @@
 user nginx;
 
+
 events {
     worker_connections 768;
 }
@@ -15,13 +16,9 @@ http {
     server {
         server_name localhost;
         listen 8080;
-        localhost=/health {
-            add_header Content-Type 'application/json';
-            return 200 'OK';
-        }
 
         location /feature/ {
-            proxy_pass http://localhost:3000/feature/;
+            proxy_pass http://172.17.0.1:3000/feature/;
         }
     }
 }
