--- a/tp api/package.json
+++ b/tp api/package.json
@@ -8,11 +8,11 @@
         
       "api:clean": "docker stop feature-api; docker rmi feature/api",
       "api:build": "docker buildx build -f api/Dockerfile -t feature/api .",
-      "api:run": "docker run -d --rm --name feature-api --network host feature/api",
+      "api:run": "docker run -d  --name feature-api --network bridge -p 3000:80 feature/api",
       "api:all": "npm run api:clean; npm run api:build; npm run api:run",
       "nginx:clean": "docker stop feature-nginx; docker rmi feature/nginx",
       "nginx:build": "docker buildx build -f nginx/Dockerfile -t feature/nginx ./nginx",
-      "nginx:run": "docker run -d --name feature-nginx --network host feature/nginx",
+      "nginx:run": "docker run -d  --name feature-nginx --network bridge -p 80:8080 feature/nginx",
       "nginx:all": "npm run nginx:clean; npm run nginx:build; npm run nginx:run"
     },
     "keywords": [],
