--- a/tp api/nginx/nginx.conf
+++ b/tp api/nginx/nginx.conf
@@ -18,7 +18,8 @@ http {
         listen 8080;
 
         location /feature/ {
-            proxy_pass http://172.18.0.1:3000/feature/ ;      
+          # proxy_pass http://172.18.0.1:3000/feature/ ;     
+          proxy_pass http://feature-api:3000/feature/; 
         }
     }
 }
