--- a/tp api/nginx/nginx.conf
+++ b/tp api/nginx/nginx.conf
@@ -19,7 +19,7 @@ http {
 
         location /feature/ {
           # proxy_pass http://172.18.0.1:3000/feature/ ;     
-          proxy_pass http://feature-api:3000/feature/; 
+          proxy_pass http://feature-api/feature/; 
         }
     }
 }
