--- a/tp api/package.json
+++ b/tp api/package.json
@@ -6,14 +6,14 @@
     "type": "module",
     "scripts": {
         
-      "api:clean": "docker stop feature-api; docker rmi feature/api",
+      "api:clean": "docker stop feature-api && docker rmi feature/api",
       "api:build": "docker buildx build -f api/Dockerfile -t feature/api .",
       "api:run": "docker run -d  --network feature-net --name feature-api feature/api",
-      "api:all": "npm run api:clean; npm run api:build; npm run api:run",
+      "api:all": "npm run api:clean && npm run api:build && npm run api:run",
       "nginx:clean": "docker stop feature-nginx; docker rmi feature/nginx",
       "nginx:build": "docker buildx build -f nginx/Dockerfile -t feature/nginx ./nginx",
       "nginx:run": "docker run -d  --network feature-net --name feature-nginx -p 80:8080 feature/nginx",
-      "nginx:all": "npm run nginx:clean; npm run nginx:build; npm run nginx:run"
+      "nginx:all": "npm run nginx:clean && npm run nginx:build && npm run nginx:run"
     },
     "keywords": [],
     "author": "",
