--- a/tp api/api/dockerfile
+++ b/tp api/api/dockerfile
@@ -3,5 +3,6 @@ WORKDIR /usr/app
 COPY package.json package-lock.json ./
 RUN npm i --omit=dev
 COPY ./api/*.mjs ./src/
+COPY ./api/.env ./src/
 ENTRYPOINT ["node"]
 CMD ["--env-file", "src/.env", "src/index.mjs"]
